--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 #currencyGroupSelect {
-  background-color: hsl(155, 45%, 85%);
+  background-color: hsl(155, 75%, 75%);
   color: hsl(120, 27%, 28%);
   width: 60%;
   font-size: large;
@@ -21,5 +21,26 @@ code {
   outline: none;
   cursor: pointer;
   line-height: 1.1;
+}
+
+.updateButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  
+  color: white;
+  height: 2em; width: 2em;
+
+  border-radius: 50%;
+  background-color: green;
+}
+
+.decreaseAlloc {
+  background-color: red;
+}
+
+.material-symbols-rounded {
+  font-size: xx-large;
 }
 
